--- a/scss/_l-deposits.scss
+++ b/scss/_l-deposits.scss
@@ -1,20 +1,21 @@
 .deposits {
   &__title {
     color: $blue900;
-    margin: 0;
+    margin: 0 0 4px;
     font-size: 20px;
     font-weight: 700;
     line-height: 24px;
+    letter-spacing: 0.3px;
   }
 
   &__description {
-    margin: 0 0 24px;
+    margin: 0 0 36px;
     color: $grey800;
     font-size: 15px;
     font-style: normal;
     font-weight: 500;
     line-height: 20px;
-    letter-spacing: 0.2px;
+    letter-spacing: 0.6px;
   }
 
   &__top {
